Refactor #5: "/news" Refactored
